@@ -365,8 +365,9 @@ static int _set_content_from_stream(struct DbmailMessage *self, GMimeStream *str
 			bstream = g_mime_stream_buffer_new(stream,GMIME_STREAM_BUFFER_BLOCK_READ);
 //			mstream = g_mime_stream_mem_new();
 
-			tmp = tmpfile();
+			tmp = tmpfile(); 
 			mstream = g_mime_stream_file_new(tmp);
+			setvbuf(tmp, NULL, _IONBF, 0);
 
 			assert(mstream);
 			fstream = g_mime_stream_filter_new_with_stream(mstream);
